--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass-loader": "^12.6.0",
     "smooth-scrollbar": "^8.7.4",
     "style-loader": "^3.3.1",
+    "swiper": "^8.0.7",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
