--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
     "@prettier/plugin-pug": "^1.20.1",
+    "@webdiscus/pug-loader": "^2.1.1",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.4",
     "copy-webpack-plugin": "^10.2.4",
@@ -38,8 +39,6 @@
     "postcss-preset-env": "^7.4.3",
     "prettier": "^2.6.2",
     "pug": "^3.0.2",
-    "pug-html-loader": "^1.1.5",
-    "raw-loader": "^4.0.2",
     "sal.js": "^0.8.5",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
